# bbb_gpio

./: .env  .gitignore  Makefile  config.h  config.status  configure.ac  libtool
docs/: bbb_pins.json
inc/: gpio.h  pins.h
src/: Makefile.am  Makefile.in  gpio.c  gpio_export.c  gpio_fd_close.c  gpio_fd_open.c  gpio_get_value.c  gpio_set_dir.c  gpio_set_edge.c  gpio_set_value.c  gpio_unexport.c  main.c  pins.c
tests/: Makefile
tests/inc/: test_pins.h
tests/src/: main.c  test_pins.c
